convert all Task date fields to UTC Instants